# app/Models/Product.php
@@ -10,6 +10,14 @@ class Product extends Model
     /** @use HasFactory<\Database\Factories\ProductFactory> */
     use HasFactory;
 
+    protected $fillable = [
+        'product_name',
+        'product_selling_price',
+        'product_buying_price',
+        'unit_id',
+        'product_stock',
+    ];
+
     public function unit()
     {
         return $this->belongsTo(Unit::class);
