# app/Models/Unit.php
@@ -11,4 +11,11 @@ class Unit extends Model
     use HasFactory;
 
     public $timestamps = false;
+    protected $fillable = [
+        'unit_name',
+        'is_big_unit',
+        'smallest_unit_id',
+        'smallest_amount'
+    ];
+    
 }
